Fix: changed the styling of the display and its children to make sure it does not exceed the width and break into more rows in case the input gets large

--- a/bundles/styles/styles.css
+++ b/bundles/styles/styles.css
@@ -19,17 +19,22 @@ main {
 
 .display {
   grid-column: 1 / 5;
-  height: auto;
   color: white;
   padding: 10px;
   font-size: 1.7rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  max-width: 100%;
-  overflow-wrap: break-word;
-  flex-wrap: wrap;
-  white-space: normal; }
+  max-width: 350px; }
+
+.display :nth-child(1) {
+  min-height: 20px;
+  color: orange;
+  text-align: right;
+  vertical-align: text-top;
+  line-height: 20px;
+  word-wrap: break-word; }
+
+.display :nth-child(2) {
+  text-align: right;
+  line-height: 35px; }
 
 #clear {
   grid-column: 1 / 3;
@@ -63,4 +68,5 @@ button:hover {
   button {
     font-size: 1rem; }
   .display {
-    font-size: 1.2rem; } }
+    font-size: 1.2rem;
+    max-width: 325px; } }
